# smolduino

./: .gitignore  Cargo.toml  README.md  atmega328p.json
.cargo/: config.toml
examples/: serial_hello_world.rs  without-lib.rs
src/: error.rs  lib.rs  main.rs
src/io/: serial.rs
src/sync/: mod.rs  mutex.rs  synccell.rs
src/sys/: interrupt.rs  mask_mappings.rs  mod.rs  reg_io.rs  reg_mappings.rs
src/timing/: delay.rs  mod.rs  timer.rs
src/utils/: mod.rs  nop.rs  num_traits.rs  sync.rs  typestate.rs  vecdeque.rs
