[package]
name = "smolduino"
version = "0.1.0"
edition = "2021"

[lib]
name = "smolduino"
path = "src/lib.rs"
# I'm just doing this to remove the unnecessary error by Rust-analyzer
# I do not need tests rn, but might have to find an alterative soon when I do..
test = false
bench = false


[[example]]
name = "serial-hello-world"
path = "examples/serial_hello_world.rs"

[profile.dev]
panic = "abort"
opt-level = "z"
lto = true
# strip = true

[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "z"
lto = true
strip = true

[dependencies]
avrd = { version = "1.0.0" }
core2 = { version = "0.4.0", default-features = false, features = ["nightly"] }
paste = "1.0.15"
